--- a/Templates/addNewEmployer.html
+++ b/Templates/addNewEmployer.html
@@ -80,12 +80,13 @@
             </div>
         </div>
             <div class="data_birth">
-                <p style="margin-right: 100px;">Date Of Birth:</p>
-                <p>DD</p>
+                <p>Date Of Birth:</p>
+                <input type="date" >
+                <!-- <p>DD</p>
                 <p>|</p>
                 <p> MM</p>
                 <p>|</p>
-                <p>YY</p>
+                <p>YY</p> -->
             </div>
 
             <div style=" max-width: 700px; margin: 35px auto; text-align: right;">
