--- a/Templates/takeVacation.html
+++ b/Templates/takeVacation.html
@@ -16,8 +16,8 @@
                 <img src="../Static/Images/Logo.png" alt="logo" width="155px" height="158px" class="header_logo__img">
                 <div class="header_menu">
                     <a href="" class="header_menu__link Home ">Home</a>
-                    <a href="" class="header_menu__link Dashboard active_link">Dashboard</a>
-                    <a href="" class="header_menu__link Take_vacation">Take vacation</a>
+                    <a href="" class="header_menu__link Dashboard ">Dashboard</a>
+                    <a href="" class="header_menu__link Take_vacation active_link">Take vacation</a>
                     <a href="" class="header_menu__link Documents">Documents</a>
                 </div>
 
@@ -66,20 +66,10 @@
             </div>
             <div class="data">
                 <div class="data_from">
-                    <p>From:</p>
-                    <p>DD</p>
-                    <p>|</p>
-                    <p> MM</p>
-                    <p>|</p>
-                    <p>YY</p>
+                    <p>From:</p><input type="date">
                 </div>
                 <div class="data_to">
-                    <p>To:</p>
-                    <p>DD</p>
-                    <p>|</p>
-                    <p> MM</p>
-                    <p>|</p>
-                    <p>YY</p>
+                   <p>To:</p> <input type="date">
                 </div>
             </div>
         </section>
