--- a/Templates/changeEmployer.html
+++ b/Templates/changeEmployer.html
@@ -80,12 +80,8 @@
             </div>
         </div>
             <div class="data_birth">
-                <p style="margin-right: 100px;">Date Of Birth:</p>
-                <p>DD</p>
-                <p>|</p>
-                <p> MM</p>
-                <p>|</p>
-                <p>YY</p>
+                <p >Date Of Birth:</p>
+                <input type="date">
             </div>
 
             <div style="margin:35px 0 0 230px;">
