--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -61,7 +61,24 @@
                 <input type="text" name="search" id="" placeholder="Search...">
                 <img src="../Static/Images/search.png" alt="" class="search_icon">
             </label>
+
             <div class="select">
+                <p>
+                    Sort by...
+                </p>
+                <img src="../Static/Images/double_arrow.png" class="arrow_sort">
+            </div>
+            <div class="sort" >
+                <form>
+                    <select size="4" class="sort_select">
+                        <option value="A-Z">A-Z</option>
+                        <option value="Z-A">Z-A</option>
+                        <option value="Vacation">Vacations</option>
+                        <option value="Vacation">Vacations</option>
+                    </select>
+                </form>
+            </div>
+            <!-- <div class="select">
                 <p>
                     Sort by...
                 </p>
@@ -84,7 +101,7 @@
                     <img src="../Static/Images/vacation_up_arrow.png" alt="">
                     <p>Vacations</p>
                 </div>
-            </div>
+            </div> -->
         </section>
         <section class="second_section">
             <div class="tabel">
@@ -95,83 +112,63 @@
                     <h4>Vacation days</h4>
                     <h4>Status</h4>
                 </div>
-                <div class="cell">
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
+                </a>
+                <a class="cell" href="profilePage.html">
                     <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
                     <p>Amir Bakirov</p>
                     <p>bakirov_am@auca.kg</p>
                     <p>13 days</p>
                     <p>On Vacation</p>
-                </div>
-                <div class="cell">
-                    <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
-                    <p>Amir Bakirov</p>
-                    <p>bakirov_am@auca.kg</p>
-                    <p>13 days</p>
-                    <p>On Vacation</p>
-                </div>
-                <div class="cell">
-                    <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
-                    <p>Amir Bakirov</p>
-                    <p>bakirov_am@auca.kg</p>
-                    <p>13 days</p>
-                    <p>On Vacation</p>
-                </div>
-                <div class="cell">
-                    <p style="display: flex; justify-content: right; padding: 0px 13px 0 0; max-width: 162px;">4325</p>
-                    <p>Amir Bakirov</p>
-                    <p>bakirov_am@auca.kg</p>
-                    <p>13 days</p>
-                    <p>On Vacation</p>
-                </div>
+                </a>
+
             </div>
         </section>
         <section class="third_section">
