--- a/Static/css/dashboard.css
+++ b/Static/css/dashboard.css
@@ -216,6 +216,7 @@ line-height: 23px;
     align-items: center;
     padding: 0 14px 0 10px; 
     margin-right: 100px;
+    cursor: pointer;
 }
 .select p{
     font-weight: 400;
@@ -230,7 +231,7 @@ line-height: 23px;
     height: 18px;
 }
 .sort{
-    background: #26ABE2;
+    /* background: #26ABE2;
 border-radius: 21px;
 width: 162px;
 height: 138px;
@@ -238,13 +239,27 @@ font-weight: 400;
 font-size: 20px;
 line-height: 23px;
 color: white;
-padding: 5px 0 0 15px;
+padding: 5px 0 0 15px; */
 visibility: hidden;
 opacity: 0;
 pointer-events: none;
 position: absolute;
 right: 180px;
 top: 40px;
+}
+.sort_select{
+    background: #26ABE2;
+    border-radius: 21px;
+    width: 162px;
+    height: 120px;
+    color: white;
+    /* padding: 5px 0 0 15px; */
+    font-size: 20px;
+    overflow-y:hidden;
+}
+.sort_select option{
+    padding: 5px 0 0 15px;
+
 }
 .sort_list{
     display: flex;
@@ -280,6 +295,7 @@ pointer-events: all;
     display: flex;
     border-bottom: 1px solid #828282;
     justify-content: space-between;
+    color: black;
 }
 
 .cell h4{
