--- a/Static/css/vacationInfo.css
+++ b/Static/css/vacationInfo.css
@@ -30,13 +30,19 @@
     border: none;
     font-family: 'Roboto';
 }
-.container{
+
+.container_info{
     width: 1026px;
-    height:100%;
+    height:800px;
     margin: 50px auto;
     padding: 50px 0;
     border-radius: 25px;
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0;
+    left: 20%;
+    z-index: 99;
+    background-color: white;
 }
 .header{
 display: flex;
