--- a/Templates/vacationInfo.html
+++ b/Templates/vacationInfo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../Static/css/vacationInfo.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container_info">
         <div class="header">
             <p>vacation info</p>
             <img src="../Static/Images/cross.png" alt="">
