--- a/Templates/vacationRequests.html
+++ b/Templates/vacationRequests.html
@@ -12,9 +12,10 @@
 
 
     <div class="container_info">
+        <div class="wrapper">
         <div class="header">
             <p>vacation info</p>
-            <img src="../Static/Images/cross.png" alt="">
+            <img src="../Static/Images/cross.png" alt="" class="close">
         </div>
         <div class="info">
             <div><p>Employee: </p><strong>Knyazev Kondrat</strong></div>
@@ -42,6 +43,7 @@
                                 <!-- info1 и personal -->
             <!-- <button class="btn_close">Close</button> -->
         </div>
+    </div>
     </div>
 
 
@@ -149,5 +151,6 @@
  
 
     <script src="script.js"></script>
+    <script src="info.js"></script>
 </body>
 </html>
